// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/Layout/Header Connected 1`] = `
<header
  className="fr-header"
  id="app-header"
  role="banner"
>
  <div
    className="fr-header__body"
  >
    <div
      className="fr-container"
    >
      <div
        className="fr-header__body-row"
      >
        <div
          className="fr-header__brand fr-enlarge-link"
        >
          <div
            className="fr-header__brand-top"
          >
            <div
              className="fr-header__logo"
            >
              <p
                className="fr-logo"
              >
                République
                <br />
                Française
              </p>
            </div>
            <div
              className="fr-header__operator"
            >
              <div
                className="fr-grid-row"
              >
                <img
                  alt="ADEME"
                  height="80"
                  src="ademe.svg"
                  width="70"
                />
              </div>
            </div>
            <div
              className="fr-header__navbar"
            >
              <button
                aria-controls="modal-header__menu"
                aria-haspopup="menu"
                className="fr-btn--menu fr-btn"
                data-fr-opened={false}
                onClick={[Function]}
                title="Menu"
              >
                Menu
              </button>
            </div>
          </div>
          <div
            className="fr-header__service"
          >
            <a
              href="/"
              onClick={[Function]}
              title="Accueil - Territoires en Transitions"
            >
              <p
                className="fr-header__service-title m-0"
              >
                Territoires en Transitions
              </p>
              <p
                className="fr-header__service-tagline m-0"
              >
                Accompagner la transition écologique des collectivités
              </p>
            </a>
          </div>
        </div>
        <div
          className="fr-header__tools"
        >
          <div
            className="fr-header__tools-links"
          >
            <ul
              className="fr-btns-group"
            >
              <li
                onClick={[Function]}
              >
                <button
                  className="fr-btn fr-fi-question-line"
                  data-test="help"
                  onClick={[Function]}
                >
                  Aide
                </button>
              </li>
              <li>
                <div
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                >
                  <button
                    aria-expanded={false}
                    className="user-menu fr-btn fr-icon-account-line"
                    data-test="connectedMenu"
                    style={
                      Object {
                        "maxWidth": "15rem",
                      }
                    }
                  >
                    <span
                      className="line-clamp-1"
                    >
                      Yolo
                    </span>
                    <i
                      className="fr-fi-arrow-down-s-line ml-2 transition-all"
                    />
                  </button>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="fr-header__menu fr-modal"
    id="modal-header__menu"
  >
    <div
      className="fr-container"
    >
      <button
        aria-controls="modal-header__menu"
        className="fr-btn fr-btn--close"
        onClick={[Function]}
      >
        Fermer
      </button>
      <nav
        aria-label="Menu principal"
        className="fr-nav flex !justify-between"
        role="navigation"
      >
        <ul
          className="fr-nav__list"
        >
          <li
            className="fr-nav__item"
          >
            <button
              aria-expanded={false}
              className="fr-nav__btn"
              onClick={[Function]}
            >
              État des lieux
            </button>
            <div
              className="fr-menu fr-collapse"
            >
              <ul
                className="fr-menu__list"
                onClickCapture={[Function]}
              >
                <li
                  className="fr-nav__item"
                >
                  <a
                    aria-controls="modal-header__menu"
                    className="fr-nav__link"
                    href="/collectivite/1/accueil"
                    onClick={[Function]}
                    target="_self"
                  >
                    Synthèse de l'état des lieux
                  </a>
                </li>
                <li
                  className="fr-nav__item"
                >
                  <a
                    aria-controls="modal-header__menu"
                    className="fr-nav__link"
                    href="/collectivite/1/personnalisation"
                    onClick={[Function]}
                    target="_self"
                  >
                    Personnalisation des référentiels
                  </a>
                </li>
                <li
                  className="fr-nav__item"
                >
                  <a
                    aria-controls="modal-header__menu"
                    className="fr-nav__link"
                    href="/collectivite/1/referentiels/cae/progression"
                    onClick={[Function]}
                    target="_self"
                  >
                    Référentiel Climat-Air-Énergie
                  </a>
                </li>
                <li
                  className="fr-nav__item"
                >
                  <a
                    aria-controls="modal-header__menu"
                    className="fr-nav__link"
                    href="/collectivite/1/labellisation/cae/suivi"
                    onClick={[Function]}
                    target="_self"
                  >
                    Labellisation Climat-Air-Énergie
                  </a>
                </li>
                <li
                  className="fr-nav__item"
                >
                  <a
                    aria-controls="modal-header__menu"
                    className="fr-nav__link"
                    href="/collectivite/1/referentiels/eci/progression"
                    onClick={[Function]}
                    target="_self"
                  >
                    Référentiel Économie Circulaire
                  </a>
                </li>
                <li
                  className="fr-nav__item"
                >
                  <a
                    aria-controls="modal-header__menu"
                    className="fr-nav__link"
                    href="/collectivite/1/labellisation/eci/suivi"
                    onClick={[Function]}
                    target="_self"
                  >
                    Labellisation Économie Circulaire
                  </a>
                </li>
              </ul>
            </div>
          </li>
          <li
            className="fr-nav__item"
          >
            <button
              aria-expanded={false}
              className="fr-nav__btn"
              onClick={[Function]}
            >
              Plans d'action
            </button>
            <div
              className="fr-menu fr-collapse"
            >
              <ul
                className="fr-menu__list"
                onClickCapture={[Function]}
              >
                <li
                  className="fr-nav__item"
                >
                  <a
                    aria-controls="modal-header__menu"
                    className="fr-nav__link"
                    href="/collectivite/1/plans/tableau-de-bord"
                    onClick={[Function]}
                    target="_self"
                  >
                    Tableau de bord
                  </a>
                </li>
                <li
                  className="fr-nav__item"
                >
                  <a
                    aria-controls="modal-header__menu"
                    className="fr-nav__link"
                    href="/collectivite/1/plans/plan"
                    onClick={[Function]}
                    target="_self"
                  >
                    Tous les plans d'action
                  </a>
                </li>
                <li
                  className="fr-nav__item"
                >
                  <a
                    aria-controls="modal-header__menu"
                    className="fr-nav__link"
                    href="/collectivite/1/plans/synthese"
                    onClick={[Function]}
                    target="_self"
                  >
                    Répartition des fiches action
                  </a>
                </li>
              </ul>
            </div>
          </li>
          <li
            className="fr-nav__item"
          >
            <a
              aria-controls="modal-header__menu"
              className="fr-nav__link"
              href="/collectivite/1/indicateurs/cles/id/"
              onClick={[Function]}
              target="_self"
            >
              Indicateurs
            </a>
          </li>
          <li
            className="fr-nav__item"
          >
            <a
              aria-controls="modal-header__menu"
              className="fr-nav__link"
              href="/recherches/collectivites"
              onClick={[Function]}
              target="_self"
            >
              Collectivités
            </a>
          </li>
        </ul>
        <ul
          className="fr-nav__list"
        >
          <li
            className="fr-nav__item"
          >
            <button
              aria-expanded={false}
              className="fr-nav__btn"
              onClick={[Function]}
            >
              Paramètres
            </button>
            <div
              className="fr-menu fr-collapse"
            >
              <ul
                className="fr-menu__list"
                onClickCapture={[Function]}
              >
                <li
                  className="fr-nav__item"
                >
                  <a
                    aria-controls="modal-header__menu"
                    className="fr-nav__link"
                    href="/collectivite/1/users"
                    onClick={[Function]}
                    target="_self"
                  >
                    Gestion des membres
                  </a>
                </li>
                <li
                  className="fr-nav__item"
                >
                  <a
                    aria-controls="modal-header__menu"
                    className="fr-nav__link"
                    href="/collectivite/1/bibliotheque"
                    onClick={[Function]}
                    target="_self"
                  >
                    Bibliothèque de documents
                  </a>
                </li>
                <li
                  className="fr-nav__item"
                >
                  <a
                    aria-controls="modal-header__menu"
                    className="fr-nav__link"
                    href="/collectivite/1/historique"
                    onClick={[Function]}
                    target="_self"
                  >
                    Journal d'activité
                  </a>
                </li>
              </ul>
            </div>
          </li>
          <li>
            <ul
              className="fr-nav__list"
              data-test="SelectCollectivite"
            >
              <li
                className="fr-nav__item !relative"
              >
                <button
                  aria-controls="SelectCollectivite"
                  aria-expanded={false}
                  className="fr-nav__btn min-w-[15rem] flex items-center"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseMove={[Function]}
                  onPointerDown={[Function]}
                  onPointerEnter={[Function]}
                >
                  <b
                    className="mr-auto pointer-events-none whitespace-nowrap text-ellipsis overflow-hidden md:max-w-[25vw] lg:max-w-[28vw]"
                  >
                    Collectivité test
                  </b>
                  <div
                    className="bg-info-2 border-info-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded !px-1.5 !py-0.5 ml-4 pointer-events-none"
                    data-test="Badge-undefined"
                  >
                    <span
                      className="text-info-1 font-bold leading-4 text-left line-clamp-1 text-xs uppercase"
                    >
                      admin
                    </span>
                  </div>
                </button>
                <div
                  className="fr-menu right-0 fr-collapse"
                  id="SelectCollectivite"
                >
                  <ul
                    className="fr-menu__list"
                    onClickCapture={[Function]}
                  >
                    <li
                      className="fr-nav__item"
                    >
                      <a
                        aria-controls="modal-header__menu"
                        className="fr-nav__link"
                        href="/collectivite/2/accueil"
                        onClick={[Function]}
                        target="_self"
                      >
                        Collectivité test 2
                        <div
                          className="bg-info-2 border-info-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded !px-1.5 !py-0.5 float-right pointer-events-none"
                          data-test="Badge-undefined"
                        >
                          <span
                            className="text-info-1 font-bold leading-4 text-left line-clamp-1 text-xs uppercase"
                          >
                            édition
                          </span>
                        </div>
                      </a>
                    </li>
                    <li
                      className="fr-nav__item"
                    >
                      <a
                        aria-controls="modal-header__menu"
                        className="fr-nav__link"
                        href="/collectivite/3/accueil"
                        onClick={[Function]}
                        target="_self"
                      >
                        Collectivité test 3
                        <div
                          className="bg-info-2 border-info-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded !px-1.5 !py-0.5 float-right pointer-events-none"
                          data-test="Badge-undefined"
                        >
                          <span
                            className="text-info-1 font-bold leading-4 text-left line-clamp-1 text-xs uppercase"
                          >
                            lecture
                          </span>
                        </div>
                      </a>
                    </li>
                  </ul>
                </div>
              </li>
            </ul>
          </li>
        </ul>
      </nav>
      <div
        className="fr-header__menu-links"
      >
        <ul
          className="fr-btns-group"
        >
          <li
            onClick={[Function]}
          >
            <button
              className="fr-btn fr-fi-question-line"
              data-test="help"
              onClick={[Function]}
            >
              Aide
            </button>
          </li>
          <li>
            <div
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onPointerDown={[Function]}
            >
              <button
                aria-expanded={false}
                className="user-menu fr-btn fr-icon-account-line"
                data-test="connectedMenu"
                style={
                  Object {
                    "maxWidth": "15rem",
                  }
                }
              >
                <span
                  className="line-clamp-1"
                >
                  Yolo
                </span>
                <i
                  className="fr-fi-arrow-down-s-line ml-2 transition-all"
                />
              </button>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</header>
`;

exports[`Storyshots app/Layout/Header Connected Visite 1`] = `
<header
  className="fr-header"
  id="app-header"
  role="banner"
>
  <div
    className="fr-header__body"
  >
    <div
      className="fr-container"
    >
      <div
        className="fr-header__body-row"
      >
        <div
          className="fr-header__brand fr-enlarge-link"
        >
          <div
            className="fr-header__brand-top"
          >
            <div
              className="fr-header__logo"
            >
              <p
                className="fr-logo"
              >
                République
                <br />
                Française
              </p>
            </div>
            <div
              className="fr-header__operator"
            >
              <div
                className="fr-grid-row"
              >
                <img
                  alt="ADEME"
                  height="80"
                  src="ademe.svg"
                  width="70"
                />
              </div>
            </div>
            <div
              className="fr-header__navbar"
            >
              <button
                aria-controls="modal-header__menu"
                aria-haspopup="menu"
                className="fr-btn--menu fr-btn"
                data-fr-opened={false}
                onClick={[Function]}
                title="Menu"
              >
                Menu
              </button>
            </div>
          </div>
          <div
            className="fr-header__service"
          >
            <a
              href="/"
              onClick={[Function]}
              title="Accueil - Territoires en Transitions"
            >
              <p
                className="fr-header__service-title m-0"
              >
                Territoires en Transitions
              </p>
              <p
                className="fr-header__service-tagline m-0"
              >
                Accompagner la transition écologique des collectivités
              </p>
            </a>
          </div>
        </div>
        <div
          className="fr-header__tools"
        >
          <div
            className="fr-header__tools-links"
          >
            <ul
              className="fr-btns-group"
            >
              <li
                onClick={[Function]}
              >
                <button
                  className="fr-btn fr-fi-question-line"
                  data-test="help"
                  onClick={[Function]}
                >
                  Aide
                </button>
              </li>
              <li>
                <div
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                >
                  <button
                    aria-expanded={false}
                    className="user-menu fr-btn fr-icon-account-line"
                    data-test="connectedMenu"
                    style={
                      Object {
                        "maxWidth": "15rem",
                      }
                    }
                  >
                    <span
                      className="line-clamp-1"
                    >
                      Yolo
                    </span>
                    <i
                      className="fr-fi-arrow-down-s-line ml-2 transition-all"
                    />
                  </button>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="fr-header__menu fr-modal"
    id="modal-header__menu"
  >
    <div
      className="fr-container"
    >
      <button
        aria-controls="modal-header__menu"
        className="fr-btn fr-btn--close"
        onClick={[Function]}
      >
        Fermer
      </button>
      <nav
        aria-label="Menu principal"
        className="fr-nav flex !justify-between"
        role="navigation"
      >
        <ul
          className="fr-nav__list"
        >
          <li
            className="fr-nav__item"
          >
            <button
              aria-expanded={false}
              className="fr-nav__btn"
              onClick={[Function]}
            >
              État des lieux
            </button>
            <div
              className="fr-menu fr-collapse"
            >
              <ul
                className="fr-menu__list"
                onClickCapture={[Function]}
              >
                <li
                  className="fr-nav__item"
                >
                  <a
                    aria-controls="modal-header__menu"
                    className="fr-nav__link"
                    href="/collectivite/1/accueil"
                    onClick={[Function]}
                    target="_self"
                  >
                    Synthèse de l'état des lieux
                  </a>
                </li>
                <li
                  className="fr-nav__item"
                >
                  <a
                    aria-controls="modal-header__menu"
                    className="fr-nav__link"
                    href="/collectivite/1/personnalisation"
                    onClick={[Function]}
                    target="_self"
                  >
                    Personnalisation des référentiels
                  </a>
                </li>
                <li
                  className="fr-nav__item"
                >
                  <a
                    aria-controls="modal-header__menu"
                    className="fr-nav__link"
                    href="/collectivite/1/referentiels/cae/progression"
                    onClick={[Function]}
                    target="_self"
                  >
                    Référentiel Climat-Air-Énergie
                  </a>
                </li>
                <li
                  className="fr-nav__item"
                >
                  <a
                    aria-controls="modal-header__menu"
                    className="fr-nav__link"
                    href="/collectivite/1/labellisation/cae/suivi"
                    onClick={[Function]}
                    target="_self"
                  >
                    Labellisation Climat-Air-Énergie
                  </a>
                </li>
                <li
                  className="fr-nav__item"
                >
                  <a
                    aria-controls="modal-header__menu"
                    className="fr-nav__link"
                    href="/collectivite/1/referentiels/eci/progression"
                    onClick={[Function]}
                    target="_self"
                  >
                    Référentiel Économie Circulaire
                  </a>
                </li>
                <li
                  className="fr-nav__item"
                >
                  <a
                    aria-controls="modal-header__menu"
                    className="fr-nav__link"
                    href="/collectivite/1/labellisation/eci/suivi"
                    onClick={[Function]}
                    target="_self"
                  >
                    Labellisation Économie Circulaire
                  </a>
                </li>
              </ul>
            </div>
          </li>
          <li
            className="fr-nav__item"
          >
            <button
              aria-expanded={false}
              className="fr-nav__btn"
              onClick={[Function]}
            >
              Plans d'action
            </button>
            <div
              className="fr-menu fr-collapse"
            >
              <ul
                className="fr-menu__list"
                onClickCapture={[Function]}
              >
                <li
                  className="fr-nav__item"
                >
                  <a
                    aria-controls="modal-header__menu"
                    className="fr-nav__link"
                    href="/collectivite/1/plans/plan"
                    onClick={[Function]}
                    target="_self"
                  >
                    Tous les plans d'action
                  </a>
                </li>
                <li
                  className="fr-nav__item"
                >
                  <a
                    aria-controls="modal-header__menu"
                    className="fr-nav__link"
                    href="/collectivite/1/plans/synthese"
                    onClick={[Function]}
                    target="_self"
                  >
                    Répartition des fiches action
                  </a>
                </li>
              </ul>
            </div>
          </li>
          <li
            className="fr-nav__item"
          >
            <a
              aria-controls="modal-header__menu"
              className="fr-nav__link"
              href="/collectivite/1/indicateurs/cles/id/"
              onClick={[Function]}
              target="_self"
            >
              Indicateurs
            </a>
          </li>
          <li
            className="fr-nav__item"
          >
            <a
              aria-controls="modal-header__menu"
              className="fr-nav__link"
              href="/recherches/collectivites"
              onClick={[Function]}
              target="_self"
            >
              Collectivités
            </a>
          </li>
        </ul>
        <ul
          className="fr-nav__list"
        >
          <li>
            <ul
              className="fr-nav__list"
              data-test="SelectCollectivite"
            >
              <li
                className="fr-nav__item !relative"
              >
                <button
                  aria-controls="SelectCollectivite"
                  aria-expanded={false}
                  className="fr-nav__btn min-w-[15rem] flex items-center"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseMove={[Function]}
                  onPointerDown={[Function]}
                  onPointerEnter={[Function]}
                >
                  <b
                    className="mr-auto pointer-events-none whitespace-nowrap text-ellipsis overflow-hidden md:max-w-[25vw] lg:max-w-[28vw]"
                  >
                    Collectivité test
                  </b>
                  <div
                    className="bg-new-2 border-new-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded !px-1.5 !py-0.5 ml-4 pointer-events-none"
                    data-test="Badge-undefined"
                  >
                    <span
                      className="text-new-1 font-bold leading-4 text-left line-clamp-1 text-xs uppercase"
                    >
                      visite
                    </span>
                  </div>
                </button>
                <div
                  className="fr-menu right-0 fr-collapse"
                  id="SelectCollectivite"
                >
                  <ul
                    className="fr-menu__list"
                    onClickCapture={[Function]}
                  >
                    <li
                      className="fr-nav__item"
                    >
                      <a
                        aria-controls="modal-header__menu"
                        className="fr-nav__link"
                        href="/collectivite/2/accueil"
                        onClick={[Function]}
                        target="_self"
                      >
                        Collectivité test 2
                        <div
                          className="bg-info-2 border-info-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded !px-1.5 !py-0.5 float-right pointer-events-none"
                          data-test="Badge-undefined"
                        >
                          <span
                            className="text-info-1 font-bold leading-4 text-left line-clamp-1 text-xs uppercase"
                          >
                            édition
                          </span>
                        </div>
                      </a>
                    </li>
                    <li
                      className="fr-nav__item"
                    >
                      <a
                        aria-controls="modal-header__menu"
                        className="fr-nav__link"
                        href="/collectivite/3/accueil"
                        onClick={[Function]}
                        target="_self"
                      >
                        Collectivité test 3
                        <div
                          className="bg-info-2 border-info-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded !px-1.5 !py-0.5 float-right pointer-events-none"
                          data-test="Badge-undefined"
                        >
                          <span
                            className="text-info-1 font-bold leading-4 text-left line-clamp-1 text-xs uppercase"
                          >
                            lecture
                          </span>
                        </div>
                      </a>
                    </li>
                  </ul>
                </div>
              </li>
            </ul>
          </li>
        </ul>
      </nav>
      <div
        className="fr-header__menu-links"
      >
        <ul
          className="fr-btns-group"
        >
          <li
            onClick={[Function]}
          >
            <button
              className="fr-btn fr-fi-question-line"
              data-test="help"
              onClick={[Function]}
            >
              Aide
            </button>
          </li>
          <li>
            <div
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onPointerDown={[Function]}
            >
              <button
                aria-expanded={false}
                className="user-menu fr-btn fr-icon-account-line"
                data-test="connectedMenu"
                style={
                  Object {
                    "maxWidth": "15rem",
                  }
                }
              >
                <span
                  className="line-clamp-1"
                >
                  Yolo
                </span>
                <i
                  className="fr-fi-arrow-down-s-line ml-2 transition-all"
                />
              </button>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</header>
`;

exports[`Storyshots app/Layout/Header Connected Visite Support 1`] = `
<header
  className="fr-header"
  id="app-header"
  role="banner"
>
  <div
    className="fr-header__body"
  >
    <div
      className="fr-container"
    >
      <div
        className="fr-header__body-row"
      >
        <div
          className="fr-header__brand fr-enlarge-link"
        >
          <div
            className="fr-header__brand-top"
          >
            <div
              className="fr-header__logo"
            >
              <p
                className="fr-logo"
              >
                République
                <br />
                Française
              </p>
            </div>
            <div
              className="fr-header__operator"
            >
              <div
                className="fr-grid-row"
              >
                <img
                  alt="ADEME"
                  height="80"
                  src="ademe.svg"
                  width="70"
                />
              </div>
            </div>
            <div
              className="fr-header__navbar"
            >
              <button
                aria-controls="modal-header__menu"
                aria-haspopup="menu"
                className="fr-btn--menu fr-btn"
                data-fr-opened={false}
                onClick={[Function]}
                title="Menu"
              >
                Menu
              </button>
            </div>
          </div>
          <div
            className="fr-header__service"
          >
            <a
              href="/"
              onClick={[Function]}
              title="Accueil - Territoires en Transitions"
            >
              <p
                className="fr-header__service-title m-0"
              >
                Territoires en Transitions
              </p>
              <p
                className="fr-header__service-tagline m-0"
              >
                Accompagner la transition écologique des collectivités
              </p>
            </a>
          </div>
        </div>
        <div
          className="fr-header__tools"
        >
          <div
            className="fr-header__tools-links"
          >
            <ul
              className="fr-btns-group"
            >
              <li
                onClick={[Function]}
              >
                <button
                  className="fr-btn fr-fi-question-line"
                  data-test="help"
                  onClick={[Function]}
                >
                  Aide
                </button>
              </li>
              <li>
                <div
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                >
                  <button
                    aria-expanded={false}
                    className="user-menu fr-btn fr-icon-customer-service-line"
                    data-test="connectedMenu"
                    style={
                      Object {
                        "maxWidth": "15rem",
                      }
                    }
                  >
                    <span
                      className="line-clamp-1"
                    >
                      Yolo
                    </span>
                    <i
                      className="fr-fi-arrow-down-s-line ml-2 transition-all"
                    />
                  </button>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="fr-header__menu fr-modal"
    id="modal-header__menu"
  >
    <div
      className="fr-container"
    >
      <button
        aria-controls="modal-header__menu"
        className="fr-btn fr-btn--close"
        onClick={[Function]}
      >
        Fermer
      </button>
      <nav
        aria-label="Menu principal"
        className="fr-nav flex !justify-between"
        role="navigation"
      >
        <ul
          className="fr-nav__list"
        >
          <li
            className="fr-nav__item"
          >
            <button
              aria-expanded={false}
              className="fr-nav__btn"
              onClick={[Function]}
            >
              État des lieux
            </button>
            <div
              className="fr-menu fr-collapse"
            >
              <ul
                className="fr-menu__list"
                onClickCapture={[Function]}
              >
                <li
                  className="fr-nav__item"
                >
                  <a
                    aria-controls="modal-header__menu"
                    className="fr-nav__link"
                    href="/collectivite/1/accueil"
                    onClick={[Function]}
                    target="_self"
                  >
                    Synthèse de l'état des lieux
                  </a>
                </li>
                <li
                  className="fr-nav__item"
                >
                  <a
                    aria-controls="modal-header__menu"
                    className="fr-nav__link"
                    href="/collectivite/1/personnalisation"
                    onClick={[Function]}
                    target="_self"
                  >
                    Personnalisation des référentiels
                  </a>
                </li>
                <li
                  className="fr-nav__item"
                >
                  <a
                    aria-controls="modal-header__menu"
                    className="fr-nav__link"
                    href="/collectivite/1/referentiels/cae/progression"
                    onClick={[Function]}
                    target="_self"
                  >
                    Référentiel Climat-Air-Énergie
                  </a>
                </li>
                <li
                  className="fr-nav__item"
                >
                  <a
                    aria-controls="modal-header__menu"
                    className="fr-nav__link"
                    href="/collectivite/1/labellisation/cae/suivi"
                    onClick={[Function]}
                    target="_self"
                  >
                    Labellisation Climat-Air-Énergie
                  </a>
                </li>
                <li
                  className="fr-nav__item"
                >
                  <a
                    aria-controls="modal-header__menu"
                    className="fr-nav__link"
                    href="/collectivite/1/referentiels/eci/progression"
                    onClick={[Function]}
                    target="_self"
                  >
                    Référentiel Économie Circulaire
                  </a>
                </li>
                <li
                  className="fr-nav__item"
                >
                  <a
                    aria-controls="modal-header__menu"
                    className="fr-nav__link"
                    href="/collectivite/1/labellisation/eci/suivi"
                    onClick={[Function]}
                    target="_self"
                  >
                    Labellisation Économie Circulaire
                  </a>
                </li>
              </ul>
            </div>
          </li>
          <li
            className="fr-nav__item"
          >
            <button
              aria-expanded={false}
              className="fr-nav__btn"
              onClick={[Function]}
            >
              Plans d'action
            </button>
            <div
              className="fr-menu fr-collapse"
            >
              <ul
                className="fr-menu__list"
                onClickCapture={[Function]}
              >
                <li
                  className="fr-nav__item"
                >
                  <a
                    aria-controls="modal-header__menu"
                    className="fr-nav__link"
                    href="/collectivite/1/plans/tableau-de-bord"
                    onClick={[Function]}
                    target="_self"
                  >
                    Tableau de bord
                  </a>
                </li>
                <li
                  className="fr-nav__item"
                >
                  <a
                    aria-controls="modal-header__menu"
                    className="fr-nav__link"
                    href="/collectivite/1/plans/plan"
                    onClick={[Function]}
                    target="_self"
                  >
                    Tous les plans d'action
                  </a>
                </li>
                <li
                  className="fr-nav__item"
                >
                  <a
                    aria-controls="modal-header__menu"
                    className="fr-nav__link"
                    href="/collectivite/1/plans/synthese"
                    onClick={[Function]}
                    target="_self"
                  >
                    Répartition des fiches action
                  </a>
                </li>
              </ul>
            </div>
          </li>
          <li
            className="fr-nav__item"
          >
            <a
              aria-controls="modal-header__menu"
              className="fr-nav__link"
              href="/collectivite/1/indicateurs/cles/id/"
              onClick={[Function]}
              target="_self"
            >
              Indicateurs
            </a>
          </li>
          <li
            className="fr-nav__item"
          >
            <a
              aria-controls="modal-header__menu"
              className="fr-nav__link"
              href="/recherches/collectivites"
              onClick={[Function]}
              target="_self"
            >
              Collectivités
            </a>
          </li>
        </ul>
        <ul
          className="fr-nav__list"
        >
          <li
            className="fr-nav__item"
          >
            <button
              aria-expanded={false}
              className="fr-nav__btn"
              onClick={[Function]}
            >
              Paramètres
            </button>
            <div
              className="fr-menu fr-collapse"
            >
              <ul
                className="fr-menu__list"
                onClickCapture={[Function]}
              >
                <li
                  className="fr-nav__item"
                >
                  <a
                    aria-controls="modal-header__menu"
                    className="fr-nav__link"
                    href="/collectivite/1/users"
                    onClick={[Function]}
                    target="_self"
                  >
                    Gestion des membres
                  </a>
                </li>
                <li
                  className="fr-nav__item"
                >
                  <a
                    aria-controls="modal-header__menu"
                    className="fr-nav__link"
                    href="/collectivite/1/bibliotheque"
                    onClick={[Function]}
                    target="_self"
                  >
                    Bibliothèque de documents
                  </a>
                </li>
                <li
                  className="fr-nav__item"
                >
                  <a
                    aria-controls="modal-header__menu"
                    className="fr-nav__link"
                    href="/collectivite/1/historique"
                    onClick={[Function]}
                    target="_self"
                  >
                    Journal d'activité
                  </a>
                </li>
              </ul>
            </div>
          </li>
          <li>
            <ul
              className="fr-nav__list"
              data-test="SelectCollectivite"
            >
              <li
                className="fr-nav__item !relative"
              >
                <button
                  aria-controls="SelectCollectivite"
                  aria-expanded={false}
                  className="fr-nav__btn min-w-[15rem] flex items-center"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseMove={[Function]}
                  onPointerDown={[Function]}
                  onPointerEnter={[Function]}
                >
                  <b
                    className="mr-auto pointer-events-none whitespace-nowrap text-ellipsis overflow-hidden md:max-w-[25vw] lg:max-w-[28vw]"
                  >
                    Collectivité test
                  </b>
                  <div
                    className="bg-new-2 border-new-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded !px-1.5 !py-0.5 ml-4 pointer-events-none"
                    data-test="Badge-undefined"
                  >
                    <span
                      className="text-new-1 font-bold leading-4 text-left line-clamp-1 text-xs uppercase"
                    >
                      visite
                    </span>
                  </div>
                </button>
                <div
                  className="fr-menu right-0 fr-collapse"
                  id="SelectCollectivite"
                >
                  <ul
                    className="fr-menu__list"
                    onClickCapture={[Function]}
                  >
                    <li
                      className="fr-nav__item"
                    >
                      <a
                        aria-controls="modal-header__menu"
                        className="fr-nav__link"
                        href="/collectivite/2/accueil"
                        onClick={[Function]}
                        target="_self"
                      >
                        Collectivité test 2
                        <div
                          className="bg-info-2 border-info-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded !px-1.5 !py-0.5 float-right pointer-events-none"
                          data-test="Badge-undefined"
                        >
                          <span
                            className="text-info-1 font-bold leading-4 text-left line-clamp-1 text-xs uppercase"
                          >
                            édition
                          </span>
                        </div>
                      </a>
                    </li>
                    <li
                      className="fr-nav__item"
                    >
                      <a
                        aria-controls="modal-header__menu"
                        className="fr-nav__link"
                        href="/collectivite/3/accueil"
                        onClick={[Function]}
                        target="_self"
                      >
                        Collectivité test 3
                        <div
                          className="bg-info-2 border-info-2 flex items-center gap-1 max-w-max h-fit px-3 py-1 border border-solid rounded !px-1.5 !py-0.5 float-right pointer-events-none"
                          data-test="Badge-undefined"
                        >
                          <span
                            className="text-info-1 font-bold leading-4 text-left line-clamp-1 text-xs uppercase"
                          >
                            lecture
                          </span>
                        </div>
                      </a>
                    </li>
                  </ul>
                </div>
              </li>
            </ul>
          </li>
        </ul>
      </nav>
      <div
        className="fr-header__menu-links"
      >
        <ul
          className="fr-btns-group"
        >
          <li
            onClick={[Function]}
          >
            <button
              className="fr-btn fr-fi-question-line"
              data-test="help"
              onClick={[Function]}
            >
              Aide
            </button>
          </li>
          <li>
            <div
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onPointerDown={[Function]}
            >
              <button
                aria-expanded={false}
                className="user-menu fr-btn fr-icon-customer-service-line"
                data-test="connectedMenu"
                style={
                  Object {
                    "maxWidth": "15rem",
                  }
                }
              >
                <span
                  className="line-clamp-1"
                >
                  Yolo
                </span>
                <i
                  className="fr-fi-arrow-down-s-line ml-2 transition-all"
                />
              </button>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</header>
`;

exports[`Storyshots app/Layout/Header Not Connected 1`] = `
<header
  className="fr-header"
  id="app-header"
  role="banner"
>
  <div
    className="fr-header__body"
  >
    <div
      className="fr-container"
    >
      <div
        className="fr-header__body-row"
      >
        <div
          className="fr-header__brand fr-enlarge-link"
        >
          <div
            className="fr-header__brand-top"
          >
            <div
              className="fr-header__logo"
            >
              <p
                className="fr-logo"
              >
                République
                <br />
                Française
              </p>
            </div>
            <div
              className="fr-header__operator"
            >
              <div
                className="fr-grid-row"
              >
                <img
                  alt="ADEME"
                  height="80"
                  src="ademe.svg"
                  width="70"
                />
              </div>
            </div>
            <div
              className="fr-header__navbar"
            >
              <button
                aria-controls="modal-header__menu"
                aria-haspopup="menu"
                className="fr-btn--menu fr-btn"
                data-fr-opened={false}
                onClick={[Function]}
                title="Menu"
              >
                Menu
              </button>
            </div>
          </div>
          <div
            className="fr-header__service"
          >
            <a
              href="/"
              onClick={[Function]}
              title="Accueil - Territoires en Transitions"
            >
              <p
                className="fr-header__service-title m-0"
              >
                Territoires en Transitions
              </p>
              <p
                className="fr-header__service-tagline m-0"
              >
                Accompagner la transition écologique des collectivités
              </p>
            </a>
          </div>
        </div>
        <div
          className="fr-header__tools"
        >
          <div
            className="fr-header__tools-links"
          >
            <ul
              className="fr-btns-group"
            >
              <li
                onClick={[Function]}
              >
                <button
                  className="fr-btn fr-fi-question-line"
                  data-test="help"
                  onClick={[Function]}
                >
                  Aide
                </button>
              </li>
              <li>
                <a
                  className="fr-btn fr-icon-add-circle-line"
                  data-test="signup"
                  href="http://localhost:3003/signup?redirect_to=http%3A%2F%2Flocalhost%2F"
                  onClick={[Function]}
                >
                  Créer un compte
                </a>
              </li>
              <li>
                <a
                  className="fr-btn fr-icon-account-line"
                  data-test="signin"
                  href="http://localhost:3003/login?redirect_to=http%3A%2F%2Flocalhost%2F"
                  onClick={[Function]}
                >
                  Se connecter
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="fr-header__menu fr-modal"
    id="modal-header__menu"
  >
    <div
      className="fr-container"
    >
      <button
        aria-controls="modal-header__menu"
        className="fr-btn fr-btn--close"
        onClick={[Function]}
      >
        Fermer
      </button>
      <div
        className="fr-header__menu-links"
      >
        <ul
          className="fr-btns-group"
        >
          <li
            onClick={[Function]}
          >
            <button
              className="fr-btn fr-fi-question-line"
              data-test="help"
              onClick={[Function]}
            >
              Aide
            </button>
          </li>
          <li>
            <a
              className="fr-btn fr-icon-add-circle-line"
              data-test="signup"
              href="http://localhost:3003/signup?redirect_to=http%3A%2F%2Flocalhost%2F"
              onClick={[Function]}
            >
              Créer un compte
            </a>
          </li>
          <li>
            <a
              className="fr-btn fr-icon-account-line"
              data-test="signin"
              href="http://localhost:3003/login?redirect_to=http%3A%2F%2Flocalhost%2F"
              onClick={[Function]}
            >
              Se connecter
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</header>
`;
